⚡️채팅방 목록, 채팅방 내 유저정보 캐싱