@@ -11,6 +11,10 @@ import com.ktb.chatapp.service.MessageReadStatusService;
 import jakarta.annotation.Nullable;
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Set;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -64,14 +68,20 @@ public class MessageLoader {
 
         var messageIds = messages.stream().map(Message::getId).toList();
         messageReadStatusService.updateReadStatus(messageIds, userId);
+        Set<String> senderIds = messages.stream()
+                .map(Message::getSenderId)
+                .filter(Objects::nonNull)
+                .collect(Collectors.toSet());
+
+        Map<String, User> userMap = userRepository.findAllById(senderIds).stream()
+                .collect(Collectors.toMap(User::getId, Function.identity()));
 
         // 메시지 응답 생성
         List<MessageResponse> messageResponses = messages.stream()
                 .map(message -> {
-                    var user = findUserById(message.getSenderId());
+                    User user = message.getSenderId() != null ? userMap.get(message.getSenderId()) : null;
                     return messageResponseMapper.mapToMessageResponse(message, user);
-                })
-                .collect(Collectors.toList());
+                }).toList();
 
         boolean hasMore = messagePage.hasNext();
 
